<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.LoginActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/MainLayout">

        <TextView
            android:id="@+id/login_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_subtitle"
            style="@style/TileStyle"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email"
            style="@style/FormTextEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="@dimen/general_margin_bottom"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_subtitle" />

        <EditText
            android:id="@+id/password"
            style="@style/FormTextEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:layout_marginBottom="@dimen/general_margin_bottom"
            app:layout_constraintBottom_toTopOf="@+id/password_forgotten"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <TextView
            android:id="@+id/password_forgotten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_password_forgotten"
            android:textSize="@dimen/text_size_s"
            android:layout_marginBottom="@dimen/general_margin_bottom"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/general_margin_bottom"
            android:background="@drawable/button_border"
            android:text="@string/login_button_label"
            android:textColor="@color/black_absolute"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/login_join_subtitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_forgotten" />

        <TextView
            android:id="@+id/login_join_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/general_margin_top"
            style="@style/TileStyle"
            android:text="@string/login_join_subtitle"
            app:layout_constraintBottom_toTopOf="@+id/login_join_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

        <TextView
            android:id="@+id/login_join_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/general_margin_bottom"
            app:layout_constraintBottom_toTopOf="@+id/join_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_join_subtitle"/>


        <Button
            android:id="@+id/join_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_margin_top"
            android:background="@drawable/button_border"
            android:text="@string/login_join_button_label"
            android:textColor="@color/black_absolute"
            android:textStyle="normal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_join_text" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>
